detecting local PCL library

--- a/localization/pose_estimator/ndt_scan_matcher/ndt/CMakeLists.txt
+++ b/localization/pose_estimator/ndt_scan_matcher/ndt/CMakeLists.txt
@@ -7,7 +7,11 @@ find_package(catkin REQUIRED COMPONENTS
   ndt_pcl_modified
   ndt_omp
 )
-find_package(PCL REQUIRED COMPONENTS common)
+if (DEFINED $ENV{DEBUG_PCL_PATH})
+  find_package(PCL 1.8.1 EXACT REQUIRED NO_DEFAULT_PATH PATHS $ENV{DEBUG_PCL_PATH} COMPONENTS common)
+else()
+  find_package(PCL REQUIRED COMPONENTS common)
+endif()
 
 catkin_package(
   INCLUDE_DIRS include
