--- a/localization/pose_estimator/ndt_scan_matcher/matching_score/CMakeLists.txt
+++ b/localization/pose_estimator/ndt_scan_matcher/matching_score/CMakeLists.txt
@@ -4,7 +4,11 @@ project(matching_score)
 add_compile_options(-std=c++14)
 
 find_package(catkin REQUIRED)
-find_package(PCL REQUIRED COMPONENTS common)
+if (DEFINED $ENV{DEBUG_PCL_PATH})
+  find_package(PCL 1.8.1 EXACT REQUIRED NO_DEFAULT_PATH PATHS $ENV{DEBUG_PCL_PATH} COMPONENTS common)
+else()
+  find_package(PCL REQUIRED COMPONENTS common)
+endif()
 
 catkin_package()
 
